--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "ConnectionStrings": {
-        "Default": "Data Source=DESKTOP-0BVCVVG;Initial Catalog=NewUserRoles;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-    },
+  "ConnectionStrings": {
+    "Default": "Data Source=DESKTOP-328GUT4;Initial Catalog=NewUserRoles;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    //"Default": "Data Source=DESKTOP-0BVCVVG;Initial Catalog=NewUserRoles;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "AllowedHosts": "*"
 }
