--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data Source=DESKTOP-328GUT4;Initial Catalog=NewUserRoles;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    //"Default": "Server=db23024.public.databaseasp.net; Database=db23024; User Id=db23024; Password=5Qo%j?A9-M7m; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "Default": "Data Source=DESKTOP-328GUT4;Initial Catalog=NewUserRoles;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
     //"Default": "Data Source=DESKTOP-0BVCVVG;Initial Catalog=NewUserRoles;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "AllowedHosts": "*"
